<resources>
    <string name="app_name">Whatsup</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="display_name">Display name</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">login</string>
    <string name="headline">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="enter_username_to_add">Username to add</string>
    <string name="add">Add</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="BaseUrl">10.0.2.2:5000</string>
    <string name="settings">settings</string>
    <string name="settings2">Settings</string>
    <string name="dark_mode">Change colors</string>
    <string name="choose_port_number">Choose port number</string>
    <string name="change">Change</string>
    <string name="edit_the_server_ip_port">Edit the server ip + port</string>
    <string name="add_friend">Add friend</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">send</string>
</resources>