<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings"
    android:background="@drawable/wallpaper2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="ExtraText">
    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:background="@drawable/circle"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:textColor="#ffffff" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/dark_mode"
        app:layout_constraintTop_toBottomOf="@id/Settings"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/portNumber"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/edit_the_server_ip_port"
        android:textColorHint="#FFFBF6"
        android:background="@drawable/custom_et"
        android:drawablePadding="-30dp"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/serverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintStart_toEndOf="@id/portNumber"
        app:layout_constraintBaseline_toBaselineOf="@id/portNumber"
        android:layout_marginTop="30dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10pt"
        android:src="@drawable/ic_back"/>


</androidx.constraintlayout.widget.ConstraintLayout>
