<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="548dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:layout_editor_absoluteX="6dp">

        <EditText
            android:id="@+id/usernameInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="?attr/colorOnSurface" />

        <EditText
            android:id="@+id/nicknameInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="?attr/colorOnSurface" />

        <EditText
            android:id="@+id/passwordInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="?attr/colorOnSurface" />

        <EditText
            android:id="@+id/confirmPasswordInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="?attr/colorOnSurface" />


        <ImageButton
            android:id="@+id/imageInputField"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:background="@color/white"
            android:onClick="onImageButtonClick"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorError"
            android:textSize="24sp"
            android:typeface="monospace"
            tools:text="Test Text" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>