<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/usernameInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:textColorHint="?attr/colorOnSurface"
            android:inputType="textPersonName"
            android:textColor="?attr/colorOnBackground"
            android:minHeight="70dp" />

        <EditText
            android:id="@+id/passwordInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="?attr/colorOnSurface"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnBackground"
            android:minHeight="70dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/login"
            android:drawableLeft="@drawable/ic_login2"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="539dp" />

        <Button
            android:id="@+id/toRegister"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/not_a_member"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="539dp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="168dp"
        android:scaleType="center"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
         />

    <TextView
        android:id="@+id/HeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="103dp"
        android:fontFamily="monospace"
        android:text="@string/headline"
        android:textSize="48sp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />




</androidx.constraintlayout.widget.ConstraintLayout>